1999-06-01  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/app_procs.c
	* app/gimprc.c: renamed init_parse_buffers() to
	parse_buffers_init().

	* app/gimprc.[ch] (parse_gimprc_file): return a boolean indicating
	success to find out if sessionrc exists.

	* app/session.c: open L&C and Brushes on first gimp invocation to
	help first-time users.

Mon May 31 06:48:56 CEST 1999 Marc Lehmann <pcg@goof.com>

        * configure.in, README: Set the PREFIX env. var. to the value of
        --enable-perl.
        * docs/parasites.txt: updated.

1999-05-31  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/info_dialog.c
	* app/rotate_tool.c
	* app/scale_tool.c: fixed some very strange grid redraw bugs which
	were caused by unblocked sizeentry signals. It's generally a bad
	idea to connect to a sizeentry's signal before initialization.
	Removed the workaround for the gdk assert failures about
	"gc != NULL" because the signals were the real reason.

	* app/transform_core.c: originally wanted to fix the bug here but
	ended up with just some function headers made ansi compliant.

1999-05-31  Tuomas Kuosmanen  <tigert@gimp.org>

	* gimp1_1_splash.ppm: Guess what? We now have an important indicator
	that reminds of the RIGHT MOUSEBUTTON MENU!! :)

1999-05-31  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/commands.c
	* app/crop.c
	* app/file_new_dialog.c
	* app/info_dialog.[ch]
	* app/interface.c
	* app/layers_dialog.c
	* app/resize.[ch]
	* app/rotate_tool.c
	* app/scale_tool.c
	* app/shear_tool.c: finished the float->double migration for
	resolution values. Standardized the order of function calls which
	initialize sizeentries. Fixed some off-by-one errors by using
	correct double->int casting. Use the g* counterparts of int and
	double in some places. Various code cleanups.

	* app/preferences_dialog.c: same changes as above plus a cleaner
	implementation of the mem_size_unit stuff. The whole dialog should
	behave like before.
