@@ -1,3 +1,8 @@
+Tue Jun  1 12:07:57 PDT 1999 Manish Singh <yosh@gimp.org>
+
+	* plug-ins/xwd/xwd.c: hackaround for buggy window managers (like
+	WindowMaker) that store a bogus XWDColor flag field.
+
 1999-06-01  Michael Natterer  <mitschel@cs.tu-berlin.de>
 
 	* app/app_procs.c
